--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <body>
   <h1>Ryan Ochoa</h1>
+  <p>I just graduated from Boise State University in December 2018. I love mixing, listening to, and producing
+    electronic music. I also love learning in general. </p>
 </body>
 
 </html>
