--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 
 <body>
   <h1>Ryan Ochoa</h1>
-  <p>I just graduated from Boise State University in December 2018. I love mixing, listening to, and producing
-    electronic music. I also love learning in general. </p>
+  <p>Hi, my name is Ryan Ochoa and I'm 24 years old.</p>
+  <ul>I just graduated from Boise State University in December 2018.</ul>
+  <ul>I love mixing, listening to, and producing electronic music.</ul>
+  <ul>I really enjoy challenging myself. </ul>
 </body>
 
 </html>
