organized my list

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 <body>
   <h1>Ryan Ochoa</h1>
   <p>Hi, my name is Ryan Ochoa and I'm 24 years old.</p>
-  <ul>I just graduated from Boise State University in December 2018.</ul>
-  <ul>I love mixing, listening to, and producing electronic music.</ul>
-  <ul>I really enjoy challenging myself. </ul>
+  <ul>
+    <li>I just graduated from Boise State University in December 2018.</li>
+    <li>I love mixing, listening to, and producing electronic music.</li>
+    <li>I really enjoy challenging myself. </li>
+  </ul>
 </body>
 
 </html>
